network-policy/webb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns-2
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
